--- a/public/Mailtemplate/css/style.css
+++ b/public/Mailtemplate/css/style.css
@@ -1,19 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="{{asset('public/Mailtemplate/css/style.css')}}">
-    <title>Request Accepted</title>
-    <style>
-        *{
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -28,12 +13,11 @@ html, body {
     justify-content: center;
     align-items: center;
     padding: 10px;
-
+ 
 }
 .topBar img{
-display:block;
-width: 100px;
-height: 50px;
+max-width: 60px;
+border-radius: 5px;
 }
 
 
@@ -83,7 +67,7 @@ height: 50px;
     text-align: left;
 }
 .formBox h2{
-
+ 
     font-weight: 600;
     font-size: 20px;
 }
@@ -119,31 +103,3 @@ height: 50px;
     margin: 0;
     color: rgb(223, 215, 215);
 }
-    </style>
-</head>
-<body>
-    <header class="topBar">
-<img src="{{asset('public/Mailtemplate/images/logo.jpg')}}" alt="">
-    </header>
-    <main class="mainsec">
-<h1>
-    Your Request Has Been Received!
-</h1>
-<a href="{{route('customer-profile',$admindata['id'])}}" class="forumbtn">Check Form</a>
-    </main>
-    <footer class="footer">
-<div class="links">
-  <a href="https://www.facebook.com/pixelnuts"> <i class="fa-brands fa-facebook-f"></i></a>
- <a href=""> <i class="fa-brands fa-instagram"></i></a>
- <a href=""> <i class="fa-brands fa-linkedin-in"></i></a>
-</div>
-
-<div class="copyright">
-    <p>
-
-Copyright @pixelnuts 2019-2022 All rights reserved.
-    </p>
-</div>
-    </footer>
-</body>
-</html>
